--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.3",
     "eslint": "^5.15.0",
     "express": "^4.16.4",
+    "google-auth-library": "^3.1.1",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.16",
     "mongoose-unique-validator": "^2.0.2",
