--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "eslint": "^5.15.0",
     "express": "^4.16.4",
     "google-auth-library": "^3.1.1",
+    "install": "^0.12.2",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.16",
     "mongoose-unique-validator": "^2.0.2",
+    "nodemailer": "^6.1.0",
+    "npm": "^6.9.0",
     "underscore": "^1.9.1"
   }
 }
